--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,8 @@ jobs:
         os: [macos-latest, ubuntu-latest] # [macos-latest, windows-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
