--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Run image
         uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: 1.3.2
       - name: Install package deps
         run: | 
           poetry install
@@ -83,8 +85,8 @@ jobs:
         if:  matrix.os != 'macos-latest'
         run: poetry run python setup.py bdist_wheel && poetry install
 
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
+      #- name: Setup upterm session
+      #  uses: lhotari/action-upterm@v1
       - name: pytest
         run: poetry run pytest tests
 
